RESOLVED FIXED127396
WebKit2 View Gestures (Swipe): Give WebCore the first crack at scroll events if it needs it
https://bugs.webkit.org/show_bug.cgi?id=127396
Summary WebKit2 View Gestures (Swipe): Give WebCore the first crack at scroll events ...
Tim Horton
Reported 2014-01-21 18:23:04 PST
If a page has synchronous wheel event handlers, we should let it attempt to handle events before starting a swipe.
Attachments
patch (14.97 KB, patch)
2014-01-28 15:06 PST, Tim Horton
no flags
patch (15.13 KB, patch)
2014-01-28 15:17 PST, Tim Horton
no flags
use NSEvent at the WKView level (15.15 KB, patch)
2014-01-28 15:33 PST, Tim Horton
no flags
remove unneeded fwd declaration (14.95 KB, patch)
2014-01-28 15:35 PST, Tim Horton
andersca: review+
Radar WebKit Bug Importer
Comment 1 2014-01-21 18:23:19 PST
Tim Horton
Comment 2 2014-01-28 15:06:45 PST
Simon Fraser (smfr)
Comment 3 2014-01-28 15:08:43 PST
Comment on attachment 222501 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=222501&action=review > Source/WebKit2/UIProcess/API/mac/PageClientImpl.h:118 > + virtual void didNotHandleWheelEvent(const NativeWebWheelEvent&) override; Who did not handle it? The receiver (the page client)?
WebKit Commit Bot
Comment 4 2014-01-28 15:09:53 PST
Attachment 222501 [details] did not pass style-queue: ERROR: Source/WebKit2/UIProcess/mac/ViewGestureController.h:59: The parameter name "event" adds no information, so it should be removed. [readability/parameter_name] [5] Total errors found: 1 in 11 files If any of these errors are false positives, please file a bug against check-webkit-style.
Tim Horton
Comment 5 2014-01-28 15:17:25 PST
Tim Horton
Comment 6 2014-01-28 15:33:11 PST
Created attachment 222510 [details] use NSEvent at the WKView level
Tim Horton
Comment 7 2014-01-28 15:35:05 PST
Created attachment 222513 [details] remove unneeded fwd declaration
Anders Carlsson
Comment 8 2014-01-28 16:30:22 PST
Comment on attachment 222513 [details] remove unneeded fwd declaration View in context: https://bugs.webkit.org/attachment.cgi?id=222513&action=review > Source/WebKit2/UIProcess/mac/ViewGestureController.h:114 > + bool m_hasDeferredSwipe; > + SwipeDirection m_deferredSwipeDirection; I think pending would be more fitting than deferred here.
Tim Horton
Comment 9 2014-01-28 16:46:39 PST
Note You need to log in before you can comment on or make changes to this bug.