Source/WebKit2/UIProcess/API/mac/PageClientImpl.h
@@ -115,6 +115,7 @@ private:
     virtual void updateAcceleratedCompositingMode(const LayerTreeContext&);
 
     virtual RetainPtr<CGImageRef> takeViewSnapshot() override;
+    virtual void wheelEventWasNotHandledByWebCore(const NativeWebWheelEvent&) override;
 
     virtual void accessibilityWebProcessTokenReceived(const IPC::DataReference&);
 
