Source/WebKit2/UIProcess/PageClient.h
@@ -174,6 +174,7 @@ public:
     virtual void setAcceleratedCompositingRootLayer(CALayer *) = 0;
     virtual CALayer *acceleratedCompositingRootLayer() const = 0;
     virtual RetainPtr<CGImageRef> takeViewSnapshot() = 0;
+    virtual void wheelEventWasNotHandledByWebCore(const NativeWebWheelEvent&) = 0;
 #endif
 
 #if USE(APPKIT)
